# TurgotChat

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  clear_redis_history.py  colbert_agent.py  colbert_prompt.py  gunicorn.conf.py  main.py  pdf_service.py  prometheus.yml  pyproject.toml  redis_service.py  retrieval.py  run.py  search_tool.py  turgot_agent.py  turgot_prompt.py  visitor_metrics.py
backend/app/: __init__.py
backend/app/api/: __init__.py  main.py
backend/app/core/: __init__.py  agent.py  graph_agent.py  prompts.py
backend/app/services/: __init__.py  pdf.py  redis.py  retrieval.py  transcription.py
backend/app/utils/: __init__.py  search.py  tokens.py
backend/scripts/: clear_redis.py
database/: Dockerfile  README.md  download.py  incremental_parser.py  manage_incremental.py  parse_xml_dump.py  parse_xml_dump_debug.py  pyproject.toml  run_update.py  run_update.sh  smart_parser.py  test_colbert_vector.py  test_vector_db.py
database/tests/: test_turgot_vector.py  test_update.py  test_vector_db.py
frontend/: .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  prettier.config.js
frontend/src/: disclaimer.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AppDrawer.tsx  ChatInput.tsx  ChatInterface.tsx  ConfirmationModal.tsx  Disclaimer.tsx  (+4 more)
nginx/: colbertchat.fr.conf  turgotchat.fr.conf
scripts/: copy_to_server.sh  cron_update.sh  cron_update_docker.sh  deploy.sh  setup-server.sh  start_grafana.sh  start_prometheus.sh
(+5 files in other folders)
